gcc/testsuite/gdc.test/runnable/imports/link14074x.d
module imports.link14074x;

void put(R)(R)
{
}
