gcc/testsuite/gdc.test/fail_compilation/imports/diag10089a.d
module imports.diag10089a;

struct chunks
{
    this(size_t size)
    {
    }
}
